fix raspberry pi clock jumping around

--- a/style.css
+++ b/style.css
@@ -2,9 +2,7 @@ html,
 body {
    margin:0;
    padding:0;
-   height:100%;
    overflow: hidden;
-
 }
 #container {
    min-height:100%;
@@ -57,6 +55,8 @@ font-family: 'Segoe UI Light', 'Segoe UI', 'Lucida Grande', Verdana, Arial, Helv
 	float: right;
 	margin-top:10px;
 	margin-right:15px;
+
+  min-width: 3.5em; /* Fix Raspberry Pi not rendering number spacing consistent */
 
   margin-left: 0;
   opacity: 1;
@@ -118,10 +118,6 @@ font-family: 'Segoe UI Light', 'Segoe UI', 'Lucida Grande', Verdana, Arial, Helv
   width: 10%; 
   height: 100%;
   min-width: 120px;
-}
-
-.clear {
-  clear: both;   
 }
 
 ::selection {
